--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam malesuada, orci sed pretium gravida, tellus odio molestie odio, sit amet sagittis neque nunc non ligula. In faucibus interdum tellus ac ornare. Praesent pharetra erat in placerat mattis. Maecenas non blandit risus, sed vehicula enim. In condimentum neque aliquet, dictum tortor quis, dictum lorem. Vestibulum vel tincidunt elit.
         </p>
 
-        <label>
-          <input type="text" placeholder="email required*">
-          <button class="email_capture_button">
-            <b>GET STARTED</b>
-          </button>
+        <!-- Begin Mailchimp Signup Form -->
+        <form action="https://markdfleming.us10.list-manage.com/subscribe/post?u=a0d5f9202c3e0175330487440&amp;id=f0a6413e1e&amp;f_id=008bcbe5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
+          <input type="email" value="" name="EMAIL" class="required email" placeholder="email required*" id="email" required>
+          <div hidden="true"><input type="hidden" name="tags" value="14151604,376101"></div>
+          <input type="submit" value="GET E-BOOK" name="GET FREE E-BOOK" id="mc-embedded-subscribe" class="email_capture_button">
+        </form>
 
-        </label>
+        <!--End mc_embed_signup-->
 
       </div>
     </div>
@@ -43,7 +44,7 @@
 
         </div>
         <div class="header_section" id="header_right">
-          <button onclick="openNav()" button class="email_capture_button"><b>GET MY E-BOOK</b></button>
+          <button onclick="openNav()" button class="email_capture_button">GET MY E-BOOK</button>
         </div>
       </div>
 
@@ -62,13 +63,14 @@
               </div>
             </section>
           </h1>
-          <p id="hero_paragraph">Modern marketing doesn't need to be so hard. Supercharge your business by getting practical solutions to the latest trends in marketing. Mark Fleming's newsletter provides easy to follow best practices and masterclasses on how you and your business can maximize your marketing efforts. Get the newsletter today!</p>
-          <label>
-            <input type="text" placeholder="email required*">
-            <button class="email_capture_button">
-              <b>GET STARTED</b>
-            </button>
-          </label>
+          <p id="hero_paragraph">Want to dominate your marketing game? My <b>FREE</b> newsletter has everything you need to drive your business to the next level. Tips for building and improving your funnels. Insider secrets. Practical tips you won't find anywhere else. Don't miss out. Unlock your marketing potential today!</p>
+          <form action="https://markdfleming.us10.list-manage.com/subscribe/post?u=a0d5f9202c3e0175330487440&amp;id=f0a6413e1e&amp;f_id=008bcbe5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
+            <input type="email" value="" name="EMAIL" class="required email" placeholder="email required*" id="email" required>
+
+            <div hidden="true"><input type="hidden" name="tags" value="376101"></div>
+            <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="email_capture_button">
+          </form>
+
         </div>
       </div>
 
@@ -78,11 +80,11 @@
           <div class="about_grid" id=about_right>
             <h2>About</h2>
             <p id="about_right_paragraph">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam malesuada, orci sed pretium gravida, tellus odio molestie odio, sit amet sagittis neque nunc non ligula. In faucibus interdum tellus ac ornare. Praesent pharetra erat in placerat mattis. Maecenas non blandit risus, sed vehicula enim. In condimentum neque aliquet, dictum tortor quis, dictum lorem. Vestibulum vel tincidunt elit.
+              Meet Mark Fleming, a Chicago-based marketer who specializes in building highly effective marketing systems. Mark is a business leader with a specialty in direct marketing, data-driven projects, and marketing opertations. He has proven track record of success in the financial and legal industries, working on both B2C and B2B projects.Mark currently serves as the the Director of Marketing at Market Rebellion, and he holds a MBA from the University of Illinois-Urbana-Champaign.
               <br><br>
-              Etiam a felis suscipit, egestas est nec, laoreet odio. Ut ultrices, augue porta sollicitudin condimentum, ipsum lacus finibus turpis, vel hendrerit risus arcu eget dui. Aenean euismod diam ac tellus rutrum, eu egestas sem iaculis. Curabitur sagittis faucibus rutrum. In elementum, quam a convallis commodo, diam magna porta elit, nec congue elit mauris id orci.
+              As a writer, Mark focuses on creating no-nonsense content to help entrepreneurs grow their business. I mean, why work harder, when you can work smarter, right? To get started, check out Mark's FREE E-Book: "The Starter Guide to Marketing Smart." It's packed with actionable tips that will change the way you think about your marketing efforts. Don't miss out -- download now!
             </p>
-            <button onclick="openNav()" button class="email_capture_button"><b>GET MY E-BOOK</b></button>
+            <button onclick="openNav()" button class="email_capture_button">GET MY E-BOOK</button>
 
           </div>
         </div>
@@ -187,3 +189,4 @@
   </body>
 
 </html>
+
