--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./style.css">
     <script src="index.js"></script>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    
+
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-  
+
   </head>
 
   <body>
@@ -67,11 +67,11 @@
             </section>
           </h1>
           <p id="hero_paragraph">Want to dominate your marketing game? My FREE newsletter has everything you need to drive your business to the next level. Unlock your marketing potential today!</p>
-<p id="hero_paragraph_bullets">
-<b>&#128293; Tips for generating more sales and leads</b> <br><br>
-<b>&#x2714; Industry secrets and insights</b> <br><br>
-<b>&#x2714; Best practices for improving your funnel</b> <br><br>
-</p>
+          <p id="hero_paragraph_bullets">
+            <b>&#128293; Tips for generating more sales and leads</b> <br><br>
+            <b>&#x2714; Industry secrets and insights</b> <br><br>
+            <b>&#x2714; Best practices for improving your funnel</b> <br><br>
+          </p>
           <label>
             <input type="text" placeholder="email required*">
             <button>
@@ -111,7 +111,7 @@
             </p>
 
             <div id="a1" class="FAQ_answer" style="display:none">
-                 As a writer, Mark focuses on creating no-nonsense content to help entrepreneurs grow their business. I mean, why work harder, when you can work smarter, right? To get started, check out Mark's FREE E-Book: "The Starter Guide to Marketing Smart." It's packed with actionable tips that will change the way you think about your marketing efforts. Don't miss out -- download now!
+              As a writer, Mark focuses on creating no-nonsense content to help entrepreneurs grow their business. I mean, why work harder, when you can work smarter, right? To get started, check out Mark's FREE E-Book: "The Starter Guide to Marketing Smart." It's packed with actionable tips that will change the way you think about your marketing efforts. Don't miss out -- download now!
             </div>
           </div>
 
@@ -167,11 +167,13 @@
         </div>
       </div>
       <div id="copyright">
-        <p> © <script>document.write(new Date().getFullYear())</script> Mark Fleming. All rights reserved.
+        <p> © <script>
+            document.write(new Date().getFullYear())
+
+          </script> Mark Fleming. All rights reserved.
         </p>
       </div>
     </footer>
   </body>
 
 </html>
-
