--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <div id="myNav" class="overlay">
       <div class="overlay-content">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <h2>
-          Get Your FREE Marketing E-Book
+        
+                <h2>
+          Get Your FREE E-Book
         </h2>
-
         <img id="pop-image" src="https://www.apple.com/newsroom/images/product/os/ios/standard/Apple_iPhone12Pro-iOS15-3up_060721_big.jpg.large_2x.jpg">
-
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam malesuada, orci sed pretium gravida, tellus odio molestie odio, sit amet sagittis neque nunc non ligula. In faucibus interdum tellus ac ornare.
         </p>
@@ -66,11 +65,11 @@
               </div>
             </section>
           </h1>
-          <p id="hero_paragraph">Want to dominate your marketing game? My FREE newsletter has everything you need to drive your business to the next level. Unlock your marketing potential today!</p>
+          <p id="hero_paragraph">Want to supercharge your business? My <b>FREE</b> newsletter provides exclusive tips you won't find anywhere else. Upgrade your marketing efforts by subscribing today!</p>
           <p id="hero_paragraph_bullets">
-            <b>&#128293; Tips for generating more sales and leads</b> <br><br>
-            <b>&#x2714; Industry secrets and insights</b> <br><br>
-            <b>&#x2714; Best practices for improving your funnel</b> <br><br>
+            <b>&#128293; Generate more sales and leads</b> <br><br>
+            <b>&#x2714; Optimize your marketing funnel</b> <br><br>
+            <b>&#x2714; Discover industry secrets and insights</b><br><br>
           </p>
           <label>
             <input type="text" placeholder="email required*">
